target/debug/build/crossbeam-utils-17811e9179b8e3a3/stderr
error[E0412]: cannot find type `AtomicU128` in module `core::sync::atomic`
    --> <anon>:1:38
     |
1    |   pub type Probe = core::sync::atomic::AtomicU128;
     |                                        ^^^^^^^^^^ help: a struct with a similar name exists: `AtomicU16`
     |
    ::: /home/macli/.rustup/toolchains/stable-x86_64-unknown-linux-gnu/lib/rustlib/src/rust/library/core/src/sync/atomic.rs:3079:1
     |
3079 | / atomic_int! {
3080 | |     cfg(target_has_atomic = "16"),
3081 | |     cfg(target_has_atomic_equal_alignment = "16"),
3082 | |     stable(feature = "integer_atomics_stable", since = "1.34.0"),
...    |
3094 | |     u16 AtomicU16
3095 | | }
     | |_- similarly named struct `AtomicU16` defined here

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0412`.
